* add support for `nowrap` and `nobreak` roles on formatted text
* do not insert break opportunities into bare URL with `nobreak` role
* convert string with non-ASCII characters to NFD when applying smallcaps transformation to support diacritics (#2485)
* add single up and down arrow to built-in fonts (fonts used by default themes) (#2586)

Improvements::

* render horizontal dlist without using prawn-table, allowing the description to exceed the height of one page (#2591)
* process `pre-wrap` role in text formatter
* drop support for the unmaintained payment font (`pf`) for use in font-based icons
* refactor formatted text transform to simplify how inner space is collapsed; verify only inner hard breaks are preserved
* allow relative font size for sub and sup to be set independently; support combined setting for backwards compatibility
* allow value of `base-font-size-min` and `<category>-font-size-min` theme keys to be relative (e.g., 0.75em) (#2547)
* upgrade prawn-svg to 0.36 to fix dependencies, improve gradient support, and support additional properties; disable experimental warnings when requiring prawn-svg on Ruby 2.7 (#2551)
* remove shy hyphens from text in log message when formatted text cannot be parsed (#2599)
* clear float box if next block falls outside of float group (#2596)
* resolve fonts relative to theme dir before GEM_FONTS_DIR if `pdf-fontsdir` not specified (#2349)
* add see and see-also associations on index terms to index (#2527)
* upgrade prawn-svg to 0.38.x (#2604)
* bypass any dry run logic if remaining height on page is less than heading font size
* update import_page method on converter to return true if page was imported (nil otherwise), on par with the functionality of method it replaces
* limit min toclevels value so it does not cause TOC to be empty (#2619)
* add checkmark glyph (U+2713) to prose fonts (Noto Serif and Noto Sans) to avoid need for fallback font (#2617)

Bug Fixes::
