@@ -32,6 +32,7 @@ Enhancements::
 * do not insert break opportunities into bare URL with `nobreak` role
 * convert string with non-ASCII characters to NFD when applying smallcaps transformation to support diacritics (#2485)
 * add single up and down arrow to built-in fonts (fonts used by default themes) (#2586)
+* implement support for extent attribute (container|margin|page) on tables (#1415)
 
 Improvements::
 
